--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,6 +16,7 @@ header {
   justify-content: flex-start;
   align-items: center;
   width: 960px;
+  margin: 0 auto;
 }
 
 /*Logo*/
@@ -25,7 +26,6 @@ header {
   justify-content: flex-start;
   align-items: center;
   width: 100%;
-  border: 1px solid green;
 }
 
 .logo p {
@@ -62,15 +62,13 @@ header {
   padding: 2rem 3rem;
   color: white;
 
-  border: 1px solid green;
 }
 
 .news h2 {
   font-size: 1rem;
   font-weight: bold;
   text-transform: uppercase;
-  margin-bottom: 0.25rem;
-  border: 1px solid blue;
+  padding-bottom: 0.25rem;
 
 }
 
@@ -78,7 +76,6 @@ header {
   font-size: 2rem;
   font-weight: bold;
   text-transform: uppercase;
-   border: 1px solid yellow;
 
 }
 
@@ -104,5 +101,77 @@ nav li {
 nav a{
   color: white;
   text-decoration: none;
+
+}
+
+/* Products Grid */
+
+main {
+  display: block;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.products-grid {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 960px;
+  margin: 3rem auto;
+}
+.product {
+  display: flex;
+  flex-direction: column;
+  border: 4px solid black;
+  width: 30%;
+}
+
+.product img {
+  display: block;
+  height: 9rem;
+  max-width: 100%;
+  margin: 2rem;
+  object-fit: contain;
+
+}
+
+.product h3 {
+  color: white;
+  font-size: 1rem;
+  text-align: center;
+  padding: 0.5rem;
+  background-color: black;
+}
+
+/* Contact Information (location and hours) */
+
+.contact-information {
+  display: flex;
+  justify-content: space-between;
+  width: 960px;
+  margin: 0 auto;
+  margin-bottom: 4rem;
+}
+
+.contact-information h3 {
+  background-color: black;
+  padding: 1rem 0;
+  color: white;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.location, .hours {
+  width: 35%;
+}
+
+/* Footer */
+
+footer {
+  display: flex;
+  align-items: center;
+  background-color: black;
+  height: 5rem;
+  color: white;
 
 }
