Add media queries for responsviness: tablet and mobile

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -93,6 +93,11 @@ nav ul {
   justify-content: space-between;
   width: 960px;
 }
+
+.mobile {
+  display: none;
+}
+
 nav li {
   display: inline-block;
   padding: 0.75rem 0;
@@ -119,6 +124,7 @@ main {
   width: 960px;
   margin: 3rem auto;
 }
+
 .product {
   display: flex;
   flex-direction: column;
@@ -155,9 +161,9 @@ main {
 
 .contact-information h3 {
   background-color: black;
-  padding: 1rem 0;
+  padding: 1rem 2rem;
   color: white;
-  text-align: center;
+  text-align: left;
   margin-bottom: 1rem;
 }
 
@@ -175,3 +181,103 @@ footer {
   color: white;
 
 }
+
+footer p {
+  text-align: left;
+}
+
+/* Media Queries */
+
+@media only screen and (max-width:1024px) {
+
+  body {
+    font-size: 16px;
+  }
+
+  nav ul {
+    display: none;
+  }
+
+  .mobile {
+    display: block;
+    text-align: center;
+    width: 960px;
+  }
+
+  .product {
+    width: 47%;
+  }
+
+  .glasses {
+    display: none;
+  }
+
+}
+
+/* Mobile Version */
+
+@media only screen and (max-width:470px) {
+
+  .banner {
+    align-content: flex-end;
+  }
+
+  .banner {
+    display: flex;
+    justify-content: center;
+
+    background-image: url("../img/moto.jpeg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
+    height: 15rem;
+  }
+
+  .news {
+    width: 100%;
+    margin-top: 10rem;
+    padding: 1rem 2rem;
+    color: white;
+
+  }
+
+  .news h2 {
+    font-size: 0.77rem;
+  }
+
+  .news h1 {
+    font-size: 1rem;
+  }
+
+/* Mobile version for Main section */
+
+  .container {
+    justify-content: center;
+    align-items: flex-end;
+    width: 100%;
+  }
+
+  .products-grid {
+    width: 100%;
+    justify-content: center;
+  }
+
+  .product {
+    width: 90%;
+  }
+
+  .watch {
+    display: none;
+  }
+
+  .contact-information {
+    display: block;
+    margin: 2rem auto;
+    width: 100%;
+  }
+
+  .location, .hours {
+    width: 90%;
+    margin: 0.5rem auto;
+  }
